--- a/index.html
+++ b/index.html
@@ -14,7 +14,58 @@
 <body class="d-flex flex-column h-100">
 
     <main role="main" class="flex-shrink-0">
+        <div class="container">
 
+        <!-- Train Time Jumbotron -->
+          <div class="jumbotron">
+              <div class="container text-center">
+                  <h1 class="display-4"><strong>Train Time</strong></h1>
+                  <p class="lead mt-3">Get the latest schedule for your train.</p>
+              </div>
+          </div> 
+
+          <!-- Current Train Schedule  -->
+          <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <h3 class="card-header">Current Train Schedule</h3>
+                </div>
+                <div class="card-body">
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                            <th scope="col"><strong>Train Name</strong></th>
+                            <th scope="col"><strong>Destination</strong></th>
+                            <th scope="col"><strong>Frequency (min)</strong></th>
+                            <th scope="col"><strong>Next Arrival</strong></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <th scope="row" id="train-name">Trenton Express</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            </tr>
+                            <tr>
+                            <th scope="row" id="train-name">Midnight Carriage</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            </tr>
+                            <tr>
+                            <th scope="row" id="train-name">Oregon Trail</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table> 
+                </div>
+            </div>
+          </div>
+
+        </div>
     </main>
 
     <footer role="contentinfo" class="footer mt-auto mx-auto py-3">
@@ -24,6 +75,8 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <script src="assets/js/main.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
