added bootstrap search form for submitting new train

--- a/index.html
+++ b/index.html
@@ -65,6 +65,33 @@
             </div>
           </div>
 
+          <!-- Train Input Form -->
+          <div class="row">
+            <div class="col-lg-12">
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                        <label for="inputTrain4">Train Name</label>
+                        <input type="text" class="form-control" id="inputTrain4" placeholder="Your train">
+                        </div>
+                        <div class="form-group col-md-6">
+                        <label for="inputDestination4">Destination</label>
+                        <input type="text" class="form-control" id="inputDestination4" placeholder="Your destination">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputTime">First Train Time (HH:mm - military time)</label>
+                        <input type="text" class="form-control" id="inputTime" placeholder="Your train time">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputFrequency">Frequency (min)</label>
+                        <input type="text" class="form-control" id="inputFrequency" placeholder="Your train frequency">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+          </div>
+
         </div>
     </main>
 
