added submit click function; added dataref function to dynamically update table/initially load data

--- a/index.html
+++ b/index.html
@@ -38,27 +38,32 @@
                             <th scope="col"><strong>Destination</strong></th>
                             <th scope="col"><strong>Frequency (min)</strong></th>
                             <th scope="col"><strong>Next Arrival</strong></th>
+                            <th scope="col"><strong>Minutes Away</strong></th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                            <th scope="row" id="train-name">Trenton Express</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        <tbody class="current-schedule">
+                            <tr class="each-row">
+                            <!-- <th scope="row">Trenton Express</th> -->
+                            <td>Hogwarts Express</td>
+                            <td>Hogwarts</td>
+                            <td>25</td>
+                            <td>09:35 AM</td>
+                            <td>10</td>
                             </tr>
-                            <tr>
-                            <th scope="row" id="train-name">Midnight Carriage</th>
-                            <td>Jacob</td>
+                            <!-- <tr> -->
+                            <!-- <th scope="row">Midnight Carriage</th> -->
+                            <!-- <td>Jacob</td>
                             <td>Thornton</td>
                             <td>@fat</td>
+                            <td>@fat</td>
                             </tr>
-                            <tr>
-                            <th scope="row" id="train-name">Oregon Trail</th>
-                            <td>Larry</td>
+                            <tr> -->
+                            <!-- <th scope="row">Oregon Trail</th> -->
+                            <!-- <td>Larry</td>
                             <td>the Bird</td>
                             <td>@twitter</td>
-                            </tr>
+                            <td>@twitter</td>
+                            </tr> -->
                         </tbody>
                     </table> 
                 </div>
@@ -72,11 +77,11 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                         <label for="inputTrain4">Train Name</label>
-                        <input type="text" class="form-control" id="inputTrain4" placeholder="Your train">
+                        <input type="text" class="form-control" id="inputTrain" placeholder="Your train">
                         </div>
                         <div class="form-group col-md-6">
                         <label for="inputDestination4">Destination</label>
-                        <input type="text" class="form-control" id="inputDestination4" placeholder="Your destination">
+                        <input type="text" class="form-control" id="inputDestination" placeholder="Your destination">
                         </div>
                     </div>
                     <div class="form-group">
