--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         <div class="container">
 
         <!-- Train Time Jumbotron -->
-          <div class="jumbotron">
+          <div class="jumbotron mt-4">
               <div class="container text-center">
                   <h1 class="display-4"><strong>Train Time</strong></h1>
-                  <p class="lead mt-3">Get the latest schedule for your train.</p>
+                  <p class="lead mt-4">“It ought to be plain how little you gain by getting excited and vexed. 
+                    You'll always be late for the previous train,
+                    and always on time for the next.” -Piet Hein</p>
               </div>
           </div> 
 
           <!-- Current Train Schedule  -->
-          <div class="row">
+          <div class="row disp-schedule p-3 mt-5">
             <div class="col-lg-12">
-                <div class="card">
-                    <h3 class="card-header">Current Train Schedule</h3>
-                </div>
-                <div class="card-body">
+                <h2 class="p-3 disp-schedule-header">Current Schedule</h2>
+                <div class="table-body">
                     <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
-                            <th scope="col"><strong>Train Name</strong></th>
-                            <th scope="col"><strong>Destination</strong></th>
-                            <th scope="col"><strong>Frequency (min)</strong></th>
-                            <th scope="col"><strong>Next Arrival</strong></th>
-                            <th scope="col"><strong>Minutes Away</strong></th>
+                            <th class= "table-header" scope="col"><strong>Train Name</strong></th>
+                            <th class= "table-header" scope="col"><strong>Destination</strong></th>
+                            <th class= "table-header" scope="col"><strong>Frequency (min)</strong></th>
+                            <th class= "table-header" scope="col"><strong>Next Arrival</strong></th>
+                            <th class= "table-header" scope="col"><strong>Minutes Away</strong></th>
                             </tr>
                         </thead>
                         <tbody class="current-schedule">
@@ -50,20 +50,6 @@
                             <td>09:35 AM</td>
                             <td>10</td>
                             </tr>
-                            <!-- <tr> -->
-                            <!-- <th scope="row">Midnight Carriage</th> -->
-                            <!-- <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>@fat</td>
-                            </tr>
-                            <tr> -->
-                            <!-- <th scope="row">Oregon Trail</th> -->
-                            <!-- <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>@twitter</td>
-                            </tr> -->
                         </tbody>
                     </table> 
                 </div>
@@ -71,26 +57,26 @@
           </div>
 
           <!-- Train Input Form -->
-          <div class="row">
+          <div class="row mt-5 submit-container p-3">
             <div class="col-lg-12">
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                         <label for="inputTrain4">Train Name</label>
-                        <input type="text" class="form-control" id="inputTrain" placeholder="Your train">
+                        <input type="text" class="mt-3 form-control" id="inputTrain" placeholder="Your train">
                         </div>
                         <div class="form-group col-md-6">
                         <label for="inputDestination4">Destination</label>
-                        <input type="text" class="form-control" id="inputDestination" placeholder="Your destination">
+                        <input type="text" class="mt-3 form-control" id="inputDestination" placeholder="Your destination">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="inputTime">First Train Time (HH:mm - military time)</label>
-                        <input type="text" class="form-control" id="inputTime" placeholder="Your train time">
+                        <input type="text" class="mt-3 form-control" id="inputTime" placeholder="Your train time">
                     </div>
                     <div class="form-group">
                         <label for="inputFrequency">Frequency (min)</label>
-                        <input type="text" class="form-control" id="inputFrequency" placeholder="Your train frequency">
+                        <input type="text" class="mt-3 form-control" id="inputFrequency" placeholder="Your train frequency">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -102,7 +88,8 @@
 
     <footer role="contentinfo" class="footer mt-auto mx-auto py-3">
         <div class="footer-container text-center">
-            <span class="footer-text">Copyright © 2019, Jennifer Ross</span>
+            <span class="footer-text mt-2">Photo by Charles Forerunner on Unsplash</span>
+            <span class="footer-text mt-2">Copyright © 2019, Jennifer Ross</span>
         </div>
     </footer>
 
