--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Train Time Jumbotron -->
           <div class="jumbotron mt-4">
               <div class="container text-center">
-                  <h1 class="display-4"><strong>Train Time</strong></h1>
+                  <h1 class="display-4">Train Time</h1>
                   <p class="lead mt-4">“It ought to be plain how little you gain by getting excited and vexed. 
                     You'll always be late for the previous train,
                     and always on time for the next.” -Piet Hein</p>
@@ -30,7 +30,7 @@
           <div class="row disp-schedule p-3 mt-5">
             <div class="col-lg-12">
                 <h2 class="p-3 disp-schedule-header">Current Schedule</h2>
-                <div class="table-body">
+                <div class="mt-3 table-body">
                     <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
@@ -53,24 +53,25 @@
             <div class="col-lg-12">
                 <form>
                     <div class="form-row">
-                        <div class="form-group col-md-6">
-                        <label for="inputTrain4">Train Name</label>
-                        <input type="text" class="mt-3 form-control" id="inputTrain" placeholder="Your train">
+                        <h2 class="p-3 w-100 add-train-header">Add a Train</h2>
+                        <div class="form-group d-block col-md-6">
+                        <label class="mt-3" for="inputTrain4">Train Name</label>
+                        <input type="text" class="mt-3 form-control" id="inputTrain" placeholder="Midnight Express">
                         </div>
                         <div class="form-group col-md-6">
-                        <label for="inputDestination4">Destination</label>
-                        <input type="text" class="mt-3 form-control" id="inputDestination" placeholder="Your destination">
+                        <label class="mt-3" for="inputDestination4">Destination</label>
+                        <input type="text" class="mt-3 form-control" id="inputDestination" placeholder="Atlanta">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputTime">First Train Time (HH:mm - military time)</label>
-                        <input type="text" class="mt-3 form-control" id="inputTime" placeholder="Your train time">
+                        <label class="mt-3" for="inputTime">First Train Time (HH:mm - military time)</label>
+                        <input type="text" class="mt-3 form-control" id="inputTime" placeholder="06:35">
                     </div>
                     <div class="form-group">
-                        <label for="inputFrequency">Frequency (min)</label>
-                        <input type="text" class="mt-3 form-control" id="inputFrequency" placeholder="Your train frequency">
+                        <label class="mt-3" for="inputFrequency">Frequency (min)</label>
+                        <input type="text" class="mt-3 form-control" id="inputFrequency" placeholder="30">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="mt-3 btn btn-primary">Submit</button>
                 </form>
             </div>
           </div>
